force-app/main/default/objects/Script__c/Script__c.object-meta.xml
<CustomObject>
    <description>Stores a screenplay or synopsis project owned by a writer.</description>
    <label>Script</label>
    <nameField>
        <label>Script Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>