force-app/main/default/objects/Script__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Script Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screenplay</fullName>
                <default>true</default>
                <label>Screenplay</label>
            </value>
            <value>
                <fullName>Synopsis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>