force-app/main/default/objects/Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Saved_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Scripts</label>
</ListView>